# pdf-corpus-analysis

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 1_high_level_corpus_stats.ipynb  2_document_embedding_generation.ipynb  2_document_layout_clustering.ipynb  3_document_layout_clustering_vgg16_imagenet.ipynb  html-corpus.ipynb
