[tool.poetry]
name = "pdf-corpus-analysis"
version = "0.1.0"
description = ""
authors = ["Kalyan Dutia <kalyan@climatepolicyradar.org>; Chris Ballard <chris@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.7"
python-dotenv = "^0.19.2"
PyMuPDF = "^1.19.4"
PyPDF2 = "^1.26.0"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
pandas = "^1.3.5"
seaborn = "^0.11.2"
torch = "^1.10.1"
torchvision = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
